stop using GtkModelButton when not needed
GtkModelButton is gone in GTK4, we should use menu models instead (where
I can figure out how to)

Note that this makes us lose tooltips, however luckily GTK developers say that
tooltips in menus dont make sense, so that doesn't matter too much.

I replaced the stupid Show/Hide sidebar thing with "Show Sidebar" with a
simple property action checkbutton. This is a lot simpler to implement
and is what other apps are doing these days

And I didnt change the recurring popover thing because I think that is
much simpler with the new GTK4 popover prefix/suffix widgets api

--- a/GTG/gtk/data/style.css
+++ b/GTG/gtk/data/style.css
@@ -2,11 +2,6 @@
  * MAIN WINDOW
  * --------------------------------------------------------------------------------
  */
-#main_menu GtkModelButton,
-#defer_menu GtkModelButton {
-    padding: 10px 5px;
-}
-
 .menu-disclose {
     min-width: 16px;
 }
